# landsymm_imogen_coupled

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  COUPLED_MODEL_INVESTIGATION.md  EXECUTION_PLAN.md  LICENSE  README.md
intermediary_py/imogen_ghg_controller/: HANDOFF.md  LICENSE  Quick_Start.md  README.md  TECHNICAL_MANUAL.md  pyproject.toml  requirements.txt  run_all.py
intermediary_py/imogen_ghg_controller/archive/: README.md
intermediary_py/imogen_ghg_controller/docs/: budget_references.md  component_A.md  component_B.md  component_C.md  component_D.md  methodology.md
intermediary_py/imogen_ghg_controller/inputs/: README.md
intermediary_py/imogen_ghg_controller/outputs/: README.md
intermediary_py/imogen_ghg_controller/src/component_a_anthropogenic/historical/: ch4_ef_plotting.py  ch4_ef_processing.py  ch4_mm_plotting.py  (+9 more)
intermediary_py/imogen_ghg_controller/src/component_c_integration/: conventional_comparator_plotting.py  conventional_comparator_processing.py  external_comparators_plotting.py  external_comparators_processing.py  hybrid_comparator_plotting.py  hybrid_comparator_processing.py  integrated_emissions_plotting.py  integrated_emissions_processing.py  rcmip_co2_processing.py
intermediary_py/imogen_ghg_controller/src/component_d_imogen_export/: imogen_inputs_export.py
intermediary_py/imogen_ghg_controller/src/shared/: __init__.py  budget_refs.py  constants.py  paths.py  plot_style.py
intermediary_py/imogen_ghg_controller/tests/: test_co2_option_a_validation.py  test_imogen_export_schema.py  test_unit_conversions.py
(+267 files in other folders)
