[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imogen_ghg_controller"
version = "0.1.0"
description = "Pipeline for constructing GHG emission trajectories (1900-2100, 5 SSP-RCP scenarios) for the IMOGEN climate emulator."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Project maintainer"},
]
keywords = ["climate", "emissions", "GHG", "IMOGEN", "LPJ-GUESS", "IPCC", "Tier 1"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pyarrow>=14.0",
    # [Step 11: bug C33 fix - openpyxl required by EDGAR xlsx loaders. - DKB 2026-05-07]
    "openpyxl>=3.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools]
packages = ["src", "src.shared",
            "src.component_a_anthropogenic",
            "src.component_b_natural",
            "src.component_c_integration",
            "src.component_d_imogen_export"]
